<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary_dark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ProgressBar
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="112dp"
        android:layout_height="121dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/registration_page"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_reg_t"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/please_fill"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/app_name"
                app:layout_constraintTop_toBottomOf="@+id/app_name" />

            <TextView
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/phone_number"
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_light"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/text_reg_t"
                app:layout_constraintStart_toStartOf="@+id/text_reg_t"
                app:layout_constraintTop_toBottomOf="@+id/text_reg_t" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="@+id/txt_phone"
                app:layout_constraintStart_toStartOf="@+id/txt_phone"
                app:layout_constraintTop_toBottomOf="@+id/txt_phone" />

            <TextView
                android:id="@+id/text_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/d_o_b"
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_light"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/edt_phone"
                app:layout_constraintHorizontal_bias="0.427"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_phone" />

            <EditText
                android:id="@+id/edt_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:hint="@string/enter_date_of_birth"
                android:inputType="date"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="@+id/text_dob"
                app:layout_constraintStart_toStartOf="@+id/text_dob"
                app:layout_constraintTop_toBottomOf="@+id/text_dob" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/drug"
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/edt_dob"
                app:layout_constraintStart_toStartOf="@+id/edt_dob"
                app:layout_constraintTop_toBottomOf="@+id/edt_dob" />

            <EditText
                android:id="@+id/edt_drug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:hint="@string/drug_addicted_to"
                android:inputType="textPersonName"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/other_drugs"
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_light"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/edt_drug"
                app:layout_constraintStart_toStartOf="@+id/edt_drug"
                app:layout_constraintTop_toBottomOf="@+id/edt_drug" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/specify_other_drugs_used"
                android:inputType="textPersonName"
                android:textColor="@android:color/background_light"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/duration_used"
                android:textColor="@android:color/background_light"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/editText4"
                app:layout_constraintStart_toStartOf="@+id/editText4"
                app:layout_constraintTop_toBottomOf="@+id/editText4" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:hint="@string/duration_you_have_used_the_drug"
                android:inputType="textPersonName"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/location"
                android:textColor="@android:color/background_light"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/editText6"
                app:layout_constraintStart_toStartOf="@+id/editText6"
                app:layout_constraintTop_toBottomOf="@+id/editText6" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:hint="@string/your_current_location"
                android:inputType="textPersonName"
                android:textColor="@android:color/background_light"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/gender"
                android:textColor="@android:color/background_light"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/editText7"
                app:layout_constraintStart_toStartOf="@+id/editText7"
                app:layout_constraintTop_toBottomOf="@+id/editText7" />

            <Spinner
                android:id="@+id/spinner_g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#A8B2E9"
                android:entries="@array/gender"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/aclonica"
                android:text="@string/save_info"
                android:textColor="@android:color/background_light"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/spinner_g"
                app:layout_constraintStart_toStartOf="@+id/spinner_g"
                app:layout_constraintTop_toBottomOf="@+id/spinner_g" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
