<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303f9f"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Login2"
    tools:showIn="@layout/activity_login">

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/login_page"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_mail3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/enter_email"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/edit_password3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_app_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_app_name"
        app:layout_constraintVertical_bias="0.907" />

    <EditText
        android:id="@+id/edit_password3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/butt_login3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_mail3" />

    <Button
        android:id="@+id/butt_login3"
        android:layout_width="193dp"
        android:layout_height="65dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/aclonica"
        android:text="@string/login"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_signupt3"
        app:layout_constraintEnd_toEndOf="@+id/edit_password3"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/edit_password3" />

    <TextView
        android:id="@+id/txt_signupt3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/i_don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/re_progress3"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:progressDrawable="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--        app:layout_constraintStart_toStartOf="@+id/edt_password"-->
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.48" />
</androidx.constraintlayout.widget.ConstraintLayout>
